k8s/03-admin-rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: admin
