k8s/03-infrastructure-admin-rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure-admin
