k8s/landing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: markmorcos/home-server-landing:latest
---
apiVersion: v1
kind: Service
metadata:
  name: landing-svc
spec:
  selector:
    app: landing
  ports:
    - name: client
      protocol: TCP
      port: 5173
      targetPort: 5173
