k8s/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "home-server-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mark.onthewifi.com
      secretName: home-server-tls
  rules:
    - host: mark.onthewifi.com
      http:
        paths:
          - path: /api/fr-youhanna-makin
            pathType: ImplementationSpecific
            backend:
              service:
                name: fr-youhanna-makin-service
                port:
                  number: 3000
    - host: mark.onthewifi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 5173
