k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mark.dev # mark.onthewifi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing-svc
                port:
                  number: 5173
